[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-call-patch-proxy"
version = "1.0.0"
description = "HTTP proxy that fixes malformed tool calls from Qwen3-Coder LLM models for OpenCode"
readme = "README.md"
authors = [
    {name = "Community", email = "noreply@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["qwen3", "llm", "proxy", "tool-calls", "claude-code", "streaming", "sse"]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/qwen3-call-patch-proxy"
"Bug Reports" = "https://github.com/yourusername/qwen3-call-patch-proxy/issues"
"Source Code" = "https://github.com/yourusername/qwen3-call-patch-proxy"

[project.scripts]
qwen3-call-patch-proxy = "qwen3_call_patch_proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3_call_patch_proxy"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
]
